# SmartFlo

./: .env.example  .gitignore  .replit  .vercelignore  AUTHENTICATION_FIX.md  CHECK_PRODUCTION_DATABASE.md  CONTRACT_SHARING_PAYMENT_SYSTEM.md  CREATE_DEMO_USERS.sql  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_FIX_COMMANDS.md  DEPLOYMENT_GUIDE.md  DEPLOY_COMMANDS.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_DEPLOY_GUIDE.md  FIX_DEPLOYMENT_GUIDE.md  GITHUB_PUSH_GUIDE.md  LAUNCH_CHECKLIST.md  NEON_DATABASE_SETUP.md  PLATFORM_OVERVIEW.md  PRODUCTION_FIX_GUIDE.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_SETUP.md  PRODUCTION_USER_SETUP.md  README.md  RESEND_EMAIL_SETUP_COMPLETE.md  SUPPORT_EMAIL_INTEGRATION.md  VERCEL_AUTH_FIX.md  VERCEL_BUILD_FIX.md  VERCEL_BYPASS_OPTIONS.md  VERCEL_DATABASE_DEBUG.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_LOGIN_FIX.md  VERCEL_PRODUCTION_CHECKLIST.md  VERCEL_PROTECTION_DEEP_DIVE.md  VERCEL_PROTECTION_FIX.md  auth_cookies.txt  client_cookies.txt  cookies.txt  (+10 more)
api/: [...slug].ts  _middleware.ts  activity.js  activity.ts  bypass.ts  contracts.js  contracts.ts  debug.js  index.js  index.ts  milestones.js  milestones.ts  package.json  pricing.js  server.js  test.ts  users.ts
attached_assets/: Pasted--13-52-37-866-Running-build-in-Washington-D-C-USA-East-iad1-13-52-37-867-Build-machine-co-1755377978104_1755377978106.txt  (+15 more)
client/: index.html
emails/: AuthorizationRevoked.tsx  ContactFormSubmission.tsx  (+5 more)
server/: db.ts  (+15 more)
solana/programs/freelance_escrow/: Cargo.toml
solana/programs/freelance_escrow/src/: lib.rs
(+107 files in other folders)
