[package]
name = "freelance_escrow"
version = "0.1.0"
description = "Solana program for freelance escrow and milestone-based payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freelance_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.16"
solana-sdk = "~1.16"
spl-token = { version = "~4.0", features = ["no-entrypoint"] }
tokio = "1.0"